--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,20 @@
 
 html, 
 body {
-    min-height: 100%;
+    block-size: 100%;
     margin: 0;
     display: flex;
-    flex-flow: column wrap;
+    flex-direction: column;
+    text-align: center;
 }
 
 main {
     display: flex;
     flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+    flex-shrink: 1;
 }
 
 /* -------------------------------------------------------------------------- */
