--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,8 @@ main {
 #menu {
     display: inherit;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 /* -------------------------------------------------------------------------- */
