--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
+/* Fonts */
+
+@font-face {
+    font-family: "vt323";
+    src: url("VT323/VT323-Regular.ttf");
+}
+
+/* -------------------------------------------------------------------------- */
+
 /* Default Styles & Page Structure */
 
 html, 
@@ -7,6 +16,11 @@ body {
     display: flex;
     flex-direction: column;
     text-align: center;
+    font-family: "vt323", sans-serif;
+}
+
+input {
+    font-family: "vt323", sans-serif;
 }
 
 main {
