Add dotted border to 'cell' class for visualisation

--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,11 @@ header {
     border: 1px solid black;
 }
 
+/* Temporary for visualisation */
+.cell {
+    border: 1px dotted blue;
+}
+
 /* -------------------------------------------------------------------------- */
 
 /* Sketch Menu Options */
