--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,8 @@ header {
 /* Sketch Menu Options */
 
 #menu {
+    inline-size: 160px;
+    block-size: 380px;
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -80,14 +82,18 @@ input,
     border-radius: 5px;
 }
 
+.menu-container-1, 
+.menu-container-2, 
+.menu-container-3 {
+    inline-size: 85%;
+}
+
 .menu-container-1 {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
     gap: 5px;
-}
-
-#pencil-color {
-    align-self: center;
 }
 
 .menu-container-2 {
