Add 'marker' selection evident in input button background color

--- a/styles.css
+++ b/styles.css
@@ -127,6 +127,11 @@ input,
     flex-direction: column;
 }
 
+.active {
+    color: white;
+    background-color: black;
+}
+
 /* -------------------------------------------------------------------------- */
 
 /* Footer & Acknowledgements */
