--- a/styles.css
+++ b/styles.css
@@ -183,3 +183,73 @@ footer h2 a:hover {
         font-size: small;
     }
 }
+
+/* -------------------------------------------------------------------------- */
+
+/* 
+    REFERENCE: 
+    https://www.smashingmagazine.com/2021/12/create-custom-range-input-consistent-browsers/ 
+*/
+
+/* Range Reset */
+input[type="range"] {
+    margin-top: 10px;
+    -webkit-appearance: none;
+    appearance: none;
+    background: transparent;
+    cursor: pointer;
+}
+
+/* Removes default focus */
+input[type="range"]:focus {
+    outline: none;
+}
+
+/* -------------------------------------------------------------------------- */
+
+/* Chrome, Safari, Opera and Edge Chromium styles */
+
+/* Slider Track */
+input[type="range"]::-webkit-slider-runnable-track {
+    background-color: gray;
+    border-radius: 0.5rem;
+    height: 0.5rem;  
+}
+
+/* Slider Thumb */
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;       /* Override default look */
+    appearance: none;
+    margin-top: -4px;               /* Centers thumb on the track */
+
+    /* Custom Styles */
+    background-color: white;
+    height: 1rem;
+    width: 1rem;
+    border-radius: 0.5rem;
+    outline: 2px solid black;
+}
+
+/* -------------------------------------------------------------------------- */
+
+/* Firefox styles */
+
+/* Slider Track */
+input[type="range"]::-moz-range-track {
+    background-color: gray;
+    border-radius: 0.5rem;
+    height: 0.5rem;
+}
+
+/* Slider Thumb */
+input[type="range"]::-moz-range-thumb {
+    border: none;       /* Removes extra border that FF applies */
+    border-radius: 0;   /* Removes default border-radius that FF applies */
+
+    /* Custom Styles */
+    background-color: white;
+    height: 1rem;
+    width: 1rem;
+    border-radius: 0.5rem;
+    outline: 2px solid black;
+}
