--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ footer h2 {
 
 #menu {
     inline-size: 160px;
-    block-size: 380px;
+    block-size: 440px;
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -125,6 +125,7 @@ input,
 .menu-container-3 {
     display: flex;
     flex-direction: column;
+    gap: 5px;
 }
 
 .marker {
@@ -193,7 +194,7 @@ footer h2 a:hover {
 
 /* Range Reset */
 input[type="range"] {
-    margin-top: 10px;
+    margin-top: 5px;
     -webkit-appearance: none;
     appearance: none;
     background: transparent;
